--- a/index.html
+++ b/index.html
@@ -18,31 +18,41 @@
 
   <section class="faq">
     <img src="images/illustration-woman-online-desktop.svg" alt="woman online" class="faq-image">
-    <div class="faq-menu">
+    <dl class="faq-menu">
       <h1 class="faq-menu-h1">FAQ</h1>
-      <div class="faq-menu-question">
-        <h2>How many team members can I invite?</h2>
-        <p>You can invite up to 2 additional users on the Free plan. There is no limit on 
-          team members for the Premium plan.</p>
+      <div class="faq-menu-item">
+        <dt>How many team members can I invite?</dt>
+        <dd>
+          You can invite up to 2 additional users on the Free plan. There is no limit on 
+          team members for the Premium plan.
+        </dd>
       </div>
-      <div class="faq-menu-question">
-        <h2>What is the maximum file upload size?</h2>
-        <p>No more than 2GB. All files in your account must fit your allotted storage space.</p>
+      <div class="faq-menu-item">
+        <dt>What is the maximum file upload size?</dt>
+        <dd>
+          No more than 2GB. All files in your account must fit your allotted storage space.
+        </dd>
       </div>
-      <div class="faq-menu-question">
-        <h2>How do I reset my password?</h2>
-        <p>Click “Forgot password” from the login page or “Change password” from your profile page.
-          A reset link will be emailed to you.</p>
+      <div class="faq-menu-item">
+        <dt>How do I reset my password?</dt>
+        <dd>
+          Click “Forgot password” from the login page or “Change password” from your profile page.
+          A reset link will be emailed to you.
+        </dd>
       </div>
-      <div class="faq-menu-question">
-        <h2>Can I cancel my subscription?</h2>
-        <p>Yes! Send us a message and we’ll process your request no questions asked.</p>
+      <div class="faq-menu-item">
+        <dt>Can I cancel my subscription?</dt>
+        <dd>
+          Yes! Send us a message and we’ll process your request no questions asked.
+        </dd>
       </div>
-      <div class="faq-menu-question">
-        <h2>Do you provide additional support?</h2>
-        <p>Chat and email support is available 24/7. Phone lines are open during normal business hours.</p>
+      <div class="faq-menu-item">
+        <dt>Do you provide additional support?</dt>
+        <dd>
+          Chat and email support is available 24/7. Phone lines are open during normal business hours.
+        </dd>
       </div>
-    </div>
+    </dl>
   </section>
 
   <div class="attribution">
