--- a/index.html
+++ b/index.html
@@ -17,7 +17,10 @@
 <body>
 
   <section class="faq">
-    <img src="images/illustration-woman-online-desktop.svg" alt="woman online" class="faq-image">
+    <div class="image">
+      <img src="images/illustration-woman-online-desktop.svg" alt="woman online" class="faq-image">
+      <img src="images/illustration-woman-online-mobile.svg" alt="woman online mobile" class="faq-image-mobile">
+    </div>
     <dl class="faq-menu">
       <h1 class="faq-menu-h1">FAQ</h1>
       <div class="faq-menu-item">
